# Design-Patterns

sample1/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake  product.cpp  product.h  sample_factory
